<resources>
    <string name="app_name">Рѣзань</string>
    <string name="title_home">Главная</string>
    <string name="title_map">Карта</string>
    <string name="title_shop">Магазин</string>
    <string name="title_account">Аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rezan_short">Рѣ</string>
    <string name="achievements">Достижения</string>
    <string name="our_telegram">НАШ telegram</string>
    <string name="about_us">О нас</string>
    <string name="more_sources">Еще источники</string>
    <string name="help_project">Поддержать проект</string>
    <string name="settings">Настройки</string>
    <string name="buy">Купить</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="map">Карта</string>
    <string name="shop">Магазин</string>
    <string name="go_next">Далее</string>
    <string name="change_name">Сменить ник</string>
</resources>