<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rezan.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_shop"
            app:destination="@id/navigation_shop"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_account"
            app:destination="@id/navigation_account"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_map"
            app:destination="@id/navigation_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_home_to_newsFragment"
            app:destination="@id/newsFragment"
            app:popUpTo="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.rezan.ui.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_mapObjectFragment"
            app:destination="@id/mapObjectFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.rezan.ui.fragments.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" >
        <action
            android:id="@+id/action_navigation_shop_to_productFragment"
            app:destination="@id/productFragment"
            app:popUpTo="@id/navigation_shop"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.rezan.ui.fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_nonRegisteredFragment"
            app:destination="@id/nonRegisteredFragment"
            app:popUpTo="@id/navigation_account"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_account_to_registeredFragment"
            app:destination="@id/registeredFragment"
            app:popUpTo="@id/navigation_account"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.rezan.ui.fragments.ProductFragment"
        android:label="fragment_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_placeOfShopFragment"
            app:destination="@id/placeOfShopFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/productFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nonRegisteredFragment"
        android:name="com.example.rezan.ui.fragments.NonRegisteredFragment"
        android:label="fragment_non_registered"
        tools:layout="@layout/fragment_non_registered" >
        <action
            android:id="@+id/action_nonRegisteredFragment_to_verificationPhoneFragment"
            app:destination="@id/verificationPhoneFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nonRegisteredFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/registeredFragment"
        android:name="com.example.rezan.ui.fragments.RegisteredFragment"
        android:label="fragment_registered"
        tools:layout="@layout/fragment_registered" >
        <action
            android:id="@+id/action_registeredFragment_to_navigation_account"
            app:destination="@id/navigation_account"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/registeredFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_registeredFragment_to_achievementsFragment"
            app:destination="@id/achievementsFragment"
            app:popUpTo="@id/registeredFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_registeredFragment_to_nonRegisteredFragment"
            app:destination="@id/nonRegisteredFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/registeredFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_registeredFragment_to_ratingFragment"
            app:destination="@id/ratingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/registeredFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/verificationPhoneFragment"
        android:name="com.example.rezan.ui.fragments.VerificationPhoneFragment"
        android:label="fragment_verification_phone"
        tools:layout="@layout/fragment_verification_phone" >
        <action
            android:id="@+id/action_verificationPhoneFragment_to_enterNameAndPhotoFragment"
            app:destination="@id/enterNameAndPhotoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/verificationPhoneFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_verificationPhoneFragment_to_registeredFragment"
            app:destination="@id/registeredFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/verificationPhoneFragment"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/enterNameAndPhotoFragment"
        android:name="com.example.rezan.ui.fragments.EnterNameAndPhotoFragment"
        android:label="fragment_enter_name_and_photo"
        tools:layout="@layout/fragment_enter_name_and_photo" >
        <action
            android:id="@+id/action_enterNameAndPhotoFragment_to_registeredFragment"
            app:destination="@id/registeredFragment" />
    </fragment>
    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.example.rezan.ui.fragments.AchievementsFragment"
        android:label="fragment_achievements"
        tools:layout="@layout/fragment_achievements" >
        <action
            android:id="@+id/action_achievementsFragment_to_achievementFragment"
            app:destination="@id/achievementFragment"
            app:popUpTo="@id/achievementsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/achievementFragment"
        android:name="com.example.rezan.ui.fragments.AchievementFragment"
        android:label="fragment_achievement"
        tools:layout="@layout/fragment_achievement" >
        <action
            android:id="@+id/action_achievementFragment_to_mapObjectFragment"
            app:destination="@id/mapObjectFragment"
            app:popUpTo="@id/achievementFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.rezan.ui.fragments.NewsFragment"
        android:label="fragment_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/mapObjectFragment"
        android:name="com.example.rezan.ui.fragments.MapObjectFragment"
        android:label="fragment_map_object"
        tools:layout="@layout/fragment_map_object" />
    <fragment
        android:id="@+id/placeOfShopFragment"
        android:name="com.example.rezan.ui.fragments.PlaceOfShopFragment"
        android:label="fragment_place_of_shop"
        tools:layout="@layout/fragment_place_of_shop" />
    <fragment
        android:id="@+id/ratingFragment"
        android:name="com.example.rezan.ui.fragments.RatingFragment"
        android:label="fragment_rating"
        tools:layout="@layout/fragment_rating" />


</navigation>